# ComputerGraphics-25

./: .gitignore  CMakeLists.txt  ProjectPrueba.sln  PruebaOpenGL.cpp  Puppet.cpp  README.md
JuegitoTalVez/: CMakeLists.txt
JuegitoTalVez/include/core/: Game.h  Renderer.h  ResourceManager.h  Shader.h  Texture.h  Window.h
JuegitoTalVez/include/entities/: Platform.h  Player.h  Rectangle.h
JuegitoTalVez/res/shaders/: fragment.fs  vertex.vs
JuegitoTalVez/src/: main.cpp
JuegitoTalVez/src/core/: Game.cpp  Renderer.cpp  ResorceManager.cpp  Shader.cpp  Texture.cpp  Window.cpp
JuegitoTalVez/src/entities/: Platform.cpp  Player.cpp  Rectangle.cpp
Platformer/: Platformer.sln
Platformer/Project1/: Project1.vcxproj
ProjectPrueba/: ProjectPrueba.vcxproj  ProjectPrueba.vcxproj.filters
ProjectPrueba/Debug/: OpenGL.exe.recipe  OpenGL.ilk  vc143.idb
ProjectPrueba/Debug/OpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  (+5 more)
ProjectPrueba/Release/: OpenGL.exe.recipe  OpenGL.iobj  OpenGL.ipdb
ProjectPrueba/src/: geo.h
PuppetProject/: CMakeLists.txt  Puppet.cpp  README.md  joints.txt
RayCastProject/: CMakeLists.txt  RayCast.cpp  camera.h  color.h  cylinder.h  hittable.h  interval.h  material.h  rectangle.h  rtweekend.h  sphere.h  vec3.h
RayTracerProject/: CMakeLists.txt  README.md  RayTracer.cpp  affine.h  camera.h  color.h  hittable.h  interval.h  mat4.h  material.h  rectangle.h  rtw_stb_image.h  rtweekend.h  sphere.h  texture.h
RayTracerProject/scenes/: escena_infinito.json  escena_muestra.json
res/shaders/: fragment.fs  vertex.vs
(+18 files in other folders)
